# MandelbrotPP

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: External_benchmark.cmake  External_libpng.cmake  InstallLocation.cmake  Projects.cmake  documentation_targets.cmake  options.cmake
include/mandelbrotpp/: exporter.h  macros.h  mandelbrotpp.h  mandelbrotpp_api.h
src/: CMakeLists.txt  array_size.h  benchmark.h  check.h  cmdline_flags.cpp  cmdline_flags.h  colorprint.cpp  colorprint.h  cpu.cpp  cpu.h  exporter.cpp  internal_macros.h  logging.cpp  logging.h  main.cpp  main.cxx  mandel_avx.cpp  mandel_basic.cpp  mandel_sse2.cpp  mandelbrotpp.cxx  mpp_perf.cpp  pgm_exporter.cpp  png_exporter.cpp  ppm_exporter.cpp  string_util.cpp  string_util.h  timing.h
